--- a/package.json
+++ b/package.json
@@ -12,43 +12,48 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "@preact/signals-react": "^1.3.6",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@xstate/react": "^3.2.2",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "flatted": "^3.2.9",
-    "moment": "^2.29.4",
+    "immer": "^9.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "xstate": "^4.38.3"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.4.6",
     "@socket.io/admin-ui": "^0.5.1",
     "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.19",
+    "@types/express": "^4.17.20",
     "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.4",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "@types/uuid": "^9.0.5",
     "@types/ws": "^8.5.6",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.0.2",
-    "typescript-plugin-css-modules": "^5.0.1",
+    "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.0.2",
     "vite": "^4.4.5"
   }
 }
