tlightchat-main - 20231127_013822C log event (not much, intermediate); .7z

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,7 @@
       "runtimeArgs": [],
       "program": "${file}",
       "args": [],
+      "outputCapture": "std", // for winston logger
       "skipFiles": [
         "<node_internals>/**",
         "**/node_modules/**",
