--- a/package.json
+++ b/package.json
@@ -7,9 +7,26 @@
     "dev": "vite",
     "vite2": "vite --port 5174",
     "sigs": "tsx watch ./src/SignalServer.ts",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "//--": "",
+    "test_vite_tt1": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/App.test.tsx -t=\"send accept offer communicate simple _II_ vite_tt1\"",
+    "test_vite_tt2": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/App.test.tsx -t=\"send accept offer communicate simple _II_ vite_tt2\"",
+    "test_communicate_tt": "concurrently \"pnpm test_vite_tt1\" \"pnpm test_vite_tt2\"",
+    "//---": "",
+    "randomUtest": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/randomTest/Utest1.test.tsx",
+    "//----": "",
+    "testjestcfg": "node --experimental-vm-modules --trace-warnings ./node_modules/jest/bin/jest.js --runTestsByPath ./test/_introTryTest/JestConfig.test.tsx --watch --detectOpenHandles",
+    "testjestpreview_only": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/_introTryTest/JestPreview_introTryTest.test.tsx",
+    "jest-preview": "jest-preview",
+    "// testjestpreview_1": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/_introTryTest/JestPreview_introTryTest.test.tsx -t=\"simpleTest__2\"",
+    "// testjestpreview_2": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/_introTryTest/JestPreview_introTryTest.test.tsx -t=\"simpleTest__3\"",
+    "// testjestpreview_concurrent": "concurrently \"pnpm testjestpreview_1\" \"pnpm testjestpreview_2\"",
+    "// tt1": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/_introTryTest/App_introTryTest.test.tsx -t=\"print App, check online\" --watch",
+    "// tt2": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runTestsByPath ./test/_introTryTest/App_introTryTest.test.tsx -t=\"click and send offer\"",
+    "// // tt1": "npx jest --runTestsByPath ./test/App.test.tsx -t=\"print App, check online\" --watch",
+    "// build": "tsc && vite build",
+    "// lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "// preview": "vite preview"
   },
   "dependencies": {
     "@preact/signals-react": "^1.3.6",
@@ -18,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "flatted": "^3.2.9",
     "immer": "^9.0.21",
@@ -33,28 +51,56 @@
     "xstate": "^4.38.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
     "@eslint/create-config": "^0.4.6",
+    "@jest/globals": "^29.7.0",
+    "@prettier/sync": "^0.3.0",
     "@socket.io/admin-ui": "^0.5.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/body-parser": "^1.19.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.20",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.10",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^20.8.7",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@types/uuid": "^9.0.5",
     "@types/ws": "^8.5.6",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.52.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "babel-jest": "^29.7.0",
+    "concurrently": "^8.2.2",
+    "emphasize": "^7.0.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-esm-transformer": "^1.0.0",
+    "jest-preview": "^0.3.1",
+    "jsdom": "^23.0.1",
+    "postcss": "^8.4.32",
+    "postcss-import": "^15.1.0",
+    "postcss-load-config": "^5.0.2",
+    "postcss-loader": "^7.3.3",
+    "postcss-modules": "^6.0.0",
+    "prettier": "^3.1.0",
+    "string-hash": "^1.1.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.6.0",
     "typescript": "^5.2.2",
     "typescript-plugin-css-modules": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^5.0.0"
   }
 }
