--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "//-------": "",
     "vite:build": "tsc && vite build",
     "// lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "// preview": "vite preview",
+    "vite:preview": "vite preview --port 5173 --host",
     "//--------": "",
-    "start_server_start_client": "concurrently \"pnpm sigs\" \"pnpm dev\"",
-    "start_server_build_client": "concurrently \"pnpm sigs\" \"pnpm vite:build\""
+    "start_server_start_client": "concurrently \"pnpm sigs\" \"pnpm dev\""
+  },
+  "engines": {
+    "node": ">=17.0.0 <18.19.0"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
@@ -75,6 +77,7 @@
     "socket.io-client": "^4.7.2",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
+    "vite-express": "^0.12.0",
     "winston": "^3.11.0",
     "ws": "^8.14.2",
     "xstate": "^4.38.3",
